# feup-aeda-bakery

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MasterPlan Padaria.txt  MasterPlan_Padaria.txt  README.md  olaamegosbjs
.github/workflows/: cmake.yml
data/: .workers.txt.kate-swp  boss.txt  cakes.txt  clients.txt  locations.txt  orders.txt  products.txt  workers.txt  written_clients.txt
doc/: .~lock.presentation_aeda_bakery_project.pptx#  Doxyfile  Doxyfile.txt  aeda_class_diagram.vpp  apresentacao.pptx  apresentacao_parte2.pptx  bakery_class_diagram_aeda.vpp  bakery_class_diagram_aeda.vpp.bak_000d  class-diagram.xmi
doc/html/: _c_make_lists_8txt.html  annotated.html  annotated_dup.js  boss_8cpp.html  boss_8h.html  boss_8h_source.html  boss__dashboard_8cpp.html  boss__dashboard_8h.html  boss__dashboard_8h_source.html  bst_8h_source.html  class_all_workers_are_busy-members.html  class_all_workers_are_busy.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_binary_node-members.html  class_binary_node.html  class_boss-members.html  class_boss.html  class_boss.js  class_boss_dashboard-members.html  class_boss_dashboard.html  class_boss_dashboard.js  class_bread-members.html  class_bread.html  class_bread.js  class_cake-members.html  class_cake.html  class_cake.js  class_client-members.html  class_client.html  class_client.js  class_client_dashboard-members.html  (+319 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  (+45 more)
src/: CMakeLists.txt  Novo Documento de Texto.txt  Order.cpp  Order.h  Person.cpp  Person.h  Product.cpp  Product.h  Shipping.cpp  Shipping.h  Store.cpp  Store.h  main.cpp
src/exception/: command_exception.cpp  command_exception.h  dateExceptions.cpp  dateExceptions.h  date_exception.cpp  date_exception.h  file_exception.cpp  file_exception.h  invalid_date.cpp  invalid_date.h  order_exception.cpp  order_exception.h  person_exception.cpp  person_exception.h  productExceptions.cpp  product_exception.cpp  product_exception.h  store_exception.cpp  store_exception.h
src/exceptions/: PersonExceptions.cpp  PersonExceptions.h  StoreExceptions.cpp  StoreExceptions.h  person_exceptions.cpp  person_exceptions.h  store_exceptions.cpp  store_exceptions.h
src/model/: Order.cpp  Order.h  Person.cpp  Person.h  Product.cpp  Product.h  Store.cpp  Store.h  date.cpp  date.h  order.cpp  order.h  person.cpp  person.h  product.cpp  product.h  store.cpp  store.h
src/model/date/: date.cpp  date.h
src/model/order/: order.cpp  order.h  order_manager.cpp  order_manager.h
src/model/person/: person.cpp  person.h
src/model/person/boss/: boss.cpp  boss.h
src/model/person/client/: client.cpp  client.h  client_manager.cpp  client_manager.h
src/model/person/person/: person.cpp  person.h
src/model/person/worker/: worker.cpp  worker.h  worker_manager.cpp  worker_manager.h
src/model/product/: product.cpp  product.h  product_manager.cpp  product_manager.h
src/model/store/: location_manager.cpp  location_manager.h  store.cpp  store.h
src/ui/: menu.cpp  menu.h  ui.cpp  ui.h
src/ui/command/: command.cpp  command.h
src/ui/dashboard/: boss_dashboard.cpp  boss_dashboard.h  client_dashboard.cpp  client_dashboard.h  dashboard.cpp  dashboard.h  worker_dashboard.cpp  worker_dashboard.h
src/ui/dashboard/boss/: boss_dashboard.cpp  boss_dashboard.h
src/ui/dashboard/client/: client_dashboard.cpp  client_dashboard.h
src/ui/dashboard/worker/: worker_dashboard.cpp  worker_dashboard.h
src/ui/menu/: file_menu.cpp  file_menu.h  intro_menu.cpp  intro_menu.h  login_menu.cpp  login_menu.h
src/ui/menu/intro/: intro_menu.cpp  intro_menu.h
src/ui/menu/login/: login_menu.cpp  login_menu.h
src/ui/overview/: client_overview.cpp  client_overview.h  order_overview.cpp  order_overview.h  product_overview.cpp  product_overview.h  worker_overview.cpp  worker_overview.h
src/util/: util.cpp  util.h
test/: CMakeLists.txt  dateTests.cpp  date_test.cpp  orderTest.cpp  order_test.cpp  person_test.cpp  productTest.cpp  productTests.cpp  product_test.cpp  storeTest.cpp  store_test.cpp
test/data/: boss.txt  clients.txt  locations.txt  orders.txt  products.txt  workers.txt
